<resources>
    <string name="app_name">TallerLV_SC</string>
    <string name="opciones">Opciones</string>
    <string name="areas">Áreas</string>
    <string name="volumenes">Volúmenes</string>
    <string name="historial">Historial de Operaciones</string>
    <string-array name="op_menu_principal">
        <item>@string/areas</item>
        <item>@string/volumenes</item>
        <item>@string/historial</item>
    </string-array>
    <string name="cuadrado">Cuadrado</string>
    <string name="rectangulo">Rectángulo</string>
    <string name="triangulo">Triángulo</string>
    <string name="circulo">Círculo</string>
    <string-array name="op_areas">
        <item>@string/cuadrado</item>
        <item>@string/rectangulo</item>
        <item>@string/triangulo</item>
        <item>@string/circulo</item>
    </string-array>
    <string name="esfera">Esfera</string>
    <string name="cilindro">Cilindro</string>
    <string name="cono">Cono</string>
    <string name="cubo">Cubo</string>
    <string-array name="op_volumenes">
        <item>@string/esfera</item>
        <item>@string/cilindro</item>
        <item>@string/cono</item>
        <item>@string/cubo</item>
    </string-array>
    <string name="operacion">Operacion</string>
    <string name="numero">No</string>
    <string name="datos">Datos</string>
    <string name="resultado">Resultado</string>
    <string name="area_cuadrado">Área del cuadrado</string>
    <string name="area_rectangulo">Área del rectángulo</string>
    <string name="area_triangulo">Área del triángulo</string>
    <string name="area_circulo">Área del círculo</string>
    <string name="volumen_esfera">Volúmen de esfera</string>
    <string name="volumen_cilindro">Volúmen del cilindro</string>
    <string name="volumen_cono">Volúmen del cono</string>
    <string name="volumen_cubo">Volúmen del cubo</string>
    <string name="ac_placeholder">Ingrese valor del lado</string>
    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <string name="ar_placeholder1">Ingrese base</string>
    <string name="ar_placeholder2">Ingrese altura</string>
    <string name="aci_placeholder">Ingrese radio del círculo</string>
    <string name="ve_placeholder">Ingrese radio de la esfera</string>
    <string name="vc_placeholder1">Ingrese radio</string>
    <string name="vc_placeholder2">Ingrese altura </string>
    <string name="vcu_placeholder">Ingrese valor de la arista</string>
    <string name="error_valor_vacio">Debe ingresar un valor</string>
    <string name="error_valor_menor_igual_cero">Debe ingresar un valor mayor que cero</string>
    <string name="base">Base</string>
    <string name="altura">Altura</string>
    <string name="lado">Lado</string>
    <string name="arista">Arista</string>
    <string name="radio">Radio</string>
</resources>
