<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hstOperaciones"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistorialOperaciones">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20sp"
            android:text="@string/numero"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10sp"
            android:paddingRight="20sp"
            android:text="@string/operacion"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10sp"
            android:paddingRight="50sp"
            android:text="@string/datos"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10sp"
            android:paddingRight="20sp"
            android:text="@string/resultado"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

    </TableRow>
</TableLayout>
